# AoC

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
01/Bash/: captcha.sh
01/C/: captcha.c
01/C++/: captcha.cpp
01/Haskell/: captcha.hs
01/Rust/: time_drift.rs
01/Scala/: captcha.scala
02/: checksum.hs  checksum.py
02/Haskell/: checksum.hs
02/Rust/: letter_checksum.rs
04/Rust/: repose_record.rs
05/Rust/: reductio.rs
06/Rust/: infinite_grid.rs
07/Python/: towers.py
08/Python/: registers.py
09/Python/: garbage.py
13/Python/: throughTheWire.py
2016/: Cargo.toml
2016/01/: taxicab.rs
2016/02/: bathroom_security.rs
2016/03/: squares.rs
2016/04/: security_through_obscurity.rs
2016/05/: hashes.rs
2016/11/: rtg.rs
2017/: README.md
2017/01/: captcha.c  input
2017/01/C/: captcha.c
2017/01/C++/: captcha.cpp
2017/01/JavaScript/: captcha.js
2017/01/Python/: captcha.py
2017/01/Scala/: captcha.scala
2017/01/python/: captcha.py
2017/02/Haskell/: checksum.hs
2017/02/Python/: checksum.py
2017/03/Python/: spiral.py
2017/04/Python/: passphrases.py
2017/05/Python/: jumps.py
2017/06/Python/: mancala.py
2017/07/Python/: towers.py
2017/10/Python/: knotty.py
2017/11/Python/: hexes.py
2017/12/Python/: mario.py
2018/: .gitignore  Cargo.toml  README.md  lib.rs
2018/01/: time_drift.rs
2018/01/Rust/: time_drift.rs
2018/02/: letter_checksum.rs
2018/02/Rust/: letter_checksum.rs
2018/03/: fabric.rs
2018/04/: repose_record.rs
2018/04/Rust/: repose_record.rs
2018/05/: reductio.rs
2018/06/: infinite_grid.rs
2018/06/Rust/: infinite_grid.rs
2018/07/: steps.rs
2018/07/Rust/: steps.rs
2018/08/: license_file.rs
2018/08/Rust/: license_file.rs
2018/09/: marble_mania.rs
2018/09/Rust/: marble_mania.rs
2018/10/: lights_in_the_sky.rs
2018/10/Rust/: lights_in_the_sky.rs
2018/11/: chronal_charge.rs
2018/11/Rust/: chronal_charge.rs
2018/12/: pots.rs
2018/12/Rust/: pots.rs
2018/13/: minecart_madness.rs
2018/13/Rust/: minecart_madness.rs
2018/14/: recipes.rs
2018/23/: eet.rs
2018/common/: next  rustr
2018/common/Rust/: lib.rs
2018/common/Rust/aoc/: Cargo.toml
2018/common/Rust/aoc/examples/: advent_coin.rs
2018/common/Rust/aoc/src/: friends.rs
2018/common/Rust/macros/: Cargo.toml
2018/common/rust/aoc/: Cargo.toml
2018/common/rust/aoc/examples/: not_quite_lisp.rs
2018/common/rust/aoc/src/: friends.rs  lib.rs
2020/: .env  Cargo.toml  aoc2020.py  lib.rs
2020/01/: report_repair.py  report_repair.rs
2020/02/: password_philosophy.py  password_philosophy.rs
2020/03/: toboggan_trajectory.py  toboggan_trajectory.rs
2020/04/: passport_processing.rs
2020/05/: binary_boarding.rs
2020/06/: custom_customs.rs
2020/07/: handy_haversacks.rs
2020/08/: handheld_halting.rs
2020/09/: encoding_error.rs
2020/10/: adapter_array.rs
2020/11/: seating_systems.rs
2020/12/: rain_risk.rs
2020/13/: shuttle_search.rs
2020/14/: docking_data.rs
2020/15/: rambunctious_recitation.rs
2020/16/: ticket_translation.rs
2020/17/: conway_cubes.rs
2020/18/: operation_order.rs
2020/19/: monster_messages.rs
2020/20/: jurassic_jigsaw.rs
2020/21/: allergen_assessment.rs
2020/22/: crab_combat.rs
2020/23/: crab_cups.rs
2020/24/: lobby_layout.rs
2020/25/: combo_breaker.rs
2021/: Cargo.toml  lib.rs
2021/01/: sonar_sweep.py  sonar_sweep.rs
2021/02/: dive.rs
2021/03/: binary_diagnostic.rs
2021/04/: giant_squid.rs
2021/05/: hydrothermal_venture.rs
2021/06/: lanternfish.rs
2021/07/: the_treachery_of_whales.rs
2021/09/: smoke_basin.rs
2021/10/: syntax_scoring.rs
2021/11/: dumbo_octopus.rs
2021/13/: transparent_origami.rs
2021/14/: extended_polymerization.rs
2021/19/: beacon_scanner.rs
2021/21/: dirac_dice.rs
2021/22/: reactor_reboot.rs
2021/23/: amphipod.rs
2021/24/: alu.rs
2022/: Cargo.toml  aoc2022.py
2022/01/: calorie_counting.py  calorie_counting.rs
2022/02/: rps.py  rps.rs  rps_small.rs
2022/03/: 03.py
2022/04/: camp_cleanup.rs
2022/05/: supply_stacks.rs
2022/06/: tuning_trouble.rs
2022/07/: no_space_left_on_device.rs
2022/08/: treetop_tree_house.rs
2022/09/: rope_bridge.rs
2022/10/: crt.rs
2022/11/: mitm.rs
2022/12/: 12.rs
2022/13/: distress_signal.rs
2022/14/: regolith_reservoir.rs
2022/15/: 15.rs
2022/16/: inp  inp.dot  proboscidea_volcanium.rs
2022/17/: pyroclastic_flow.rs
2022/18/: boiling_boulders.rs
2022/19/: minecraft.rs
2022/20/: gps.rs
2022/21/: monkey_math.rs
2022/22/: CubePuzzle.scala  monkey_map.rs  p3.txt
2022/23/: unstable_diffusion.rs
2022/24/: blizzard_basin.rs
2022/25/: num.txt  snafu.rs
2023/: Cargo.toml  langs.md  lib.rs
2023/01/: log  trebuchet.rs
2023/02/: cube_conundrum.rs
2023/03/: gear_ratios.rs
2023/04/: scratchcards.rs
2023/05/: fertilizer.rs
2023/06/: wait_for_it.rs
2023/07/: camel_cards.rs
2023/08/: haunted_wasteland.rs
2023/09/: mirage_maintenance.rs
2023/10/: pipe_maze.rs
2023/11/: cosmic_expansion.rs
2023/12/: hot_springs.rs
2023/13/: point_of_incidence.rs
2023/14/: parabolic_reflector_dish.rs
common/: next  rustr
common/Python/aoc/: __init__.py
common/Python/aoc-rs-bindings/: Cargo.toml
common/Python/aoc-rs-bindings/src/: lib.rs
common/Rust/aoc/: Cargo.toml
common/Rust/aoc/examples/: advent_coin.rs  houses.rs  lights.rs  naughty_strings.rs  not_quite_lisp.rs  wrapping_paper.rs
common/Rust/aoc/src/: client.rs  friends.rs  iterator_collect_ext.rs  iterator_dbg_ext.rs  iterator_freq_ext.rs  iterator_map_ext.rs  lib.rs  line_try_map.rs  macros.rs  object_store.rs  tuple_idx.rs
common/Rust/macros/: Cargo.toml
common/Rust/macros/src/: lib.rs
common/rust/aoc/: Cargo.toml
common/rust/aoc/src/: lib.rs
