[package]
name = "aoc18"
version = "0.0.1"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"

[dependencies]
aoc = { path = "common/Rust/aoc" }
clap = "2.32.0"
reqwest = "0.9.5"
tap = "0.3.0"
http = "0.1.14"
select = "0.4.2"
scan_fmt = "0.1.3"
itertools = "0.7.11"
bit-set = "0.5.0"
bit-vec = "0.5.0"

[lib]
path = "common/Rust/lib.rs"

[[bin]]
name = "day01"
path = "01/Rust/time_drift.rs"

[[bin]]
name = "day02"
path = "02/Rust/letter_checksum.rs"

[[bin]]
name = "day03"
path = "03/Rust/fabric.rs"

[[bin]]
name = "day04"
path = "04/Rust/repose_record.rs"

[[bin]]
name = "day05"
path = "05/Rust/reductio.rs"

[[bin]]
name = "day06"
path = "06/Rust/infinite_grid.rs"

[[bin]]
name = "day07"
path = "07/Rust/steps.rs"

[[bin]]
name = "day08"
path = "08/Rust/license_file.rs"

[[bin]]
name = "day09"
path = "09/Rust/marble_mania.rs"
