[package]
name = "aoc16"
version = "0.0.0"
authors = ["Rahul Butani <rrbutani@users.noreply.github.com>"]
edition = "2021"

[dependencies]
aoc = { path = "../common/Rust/aoc" }
md5 = "0.7.0"
owo-colors = "1.2.0"

[lib]
path = "lib.rs"

[[bin]]
name = "day01"
path = "01/taxicab.rs"

[[bin]]
name = "day02"
path = "02/bathroom_security.rs"

[[bin]]
name = "day03"
path = "03/squares.rs"

[[bin]]
name = "day04"
path = "04/security_through_obscurity.rs"

[[bin]]
name = "day05"
path = "05/hashes.rs"

[[bin]]
name = "day11"
path = "11/rtg.rs"
