[package]
name = "aoc18"
version = "0.0.0"
authors = ["Rahul Butani <rrbutani@users.noreply.github.com"]
edition = "2021"

[dependencies]
aoc = { path = "../common/Rust/aoc" }
bit-set = "0.5"
bit-vec = "0.6"
arrayvec = "0.5"

[lib]
path = "lib.rs"

[[bin]]
name = "day01"
path = "01/time_drift.rs"

[[bin]]
name = "day02"
path = "02/letter_checksum.rs"

[[bin]]
name = "day03"
path = "03/fabric.rs"

[[bin]]
name = "day04"
path = "04/repose_record.rs"

[[bin]]
name = "day05"
path = "05/reductio.rs"

[[bin]]
name = "day06"
path = "06/infinite_grid.rs"

[[bin]]
name = "day07"
path = "07/steps.rs"

[[bin]]
name = "day08"
path = "08/license_file.rs"

[[bin]]
name = "day09"
path = "09/marble_mania.rs"

[[bin]]
name = "day10"
path = "10/lights_in_the_sky.rs"

[[bin]]
name = "day11"
path = "11/chronal_charge.rs"

[[bin]]
name = "day12"
path = "12/pots.rs"

[[bin]]
name = "day13"
path = "13/minecart_madness.rs"

[[bin]]
name = "day14"
path = "14/recipes.rs"

[[bin]]
name = "day23"
path = "23/eet.rs"
