[package]
name = "aoc23"
version = "0.0.0"
authors = ["Rahul Butani <rrbutani@users.noreply.github.com>"]
edition = "2021"

[dependencies]
aoc = { path = "../common/Rust/aoc" }
# num-traits = "0.2"
rayon = "1.8"
# # inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"], optional = true }
# # fxhash = "0.2"
owo-colors = "3.2"
# # # dashmap = "5.0"
# # inline-python = { version = "0.8", optional = true }
# # plotters = { version = "0.3", optional = true }
# derive_more = "0.99"
# bimap = "0.6"
# static_assertions = "1.1"
# reqwest = "0.11"
strum = { version = "0.25", features = ["derive"] }

[features]

[lib]
path = "lib.rs"

[[bin]]
name = "day01"
path = "01/trebuchet.rs"

[[bin]]
name = "day02"
path = "02/cube_conundrum.rs"

[[bin]]
name = "day03"
path = "03/gear_ratios.rs"

[[bin]]
name = "day04"
path = "04/scratchcards.rs"

[[bin]]
name = "day05"
path = "05/fertilizer.rs"

[[bin]]
name = "day06"
path = "06/wait_for_it.rs"

[[bin]]
name = "day07"
path = "07/camel_cards.rs"

[[bin]]
name = "day08"
path = "08/haunted_wasteland.rs"

[[bin]]
name = "day09"
path = "09/mirage_maintenance.rs"

[[bin]]
name = "day10"
path = "10/pipe_maze.rs"

[[bin]]
name = "day11"
path = "11/cosmic_expansion.rs"

[[bin]]
name = "day12"
path = "12/hot_springs.rs"

[[bin]]
name = "day13"
path = "13/point_of_incidence.rs"

# [[bin]]
# name = "day14"
# path = "14/regolith_reservoir.rs"

# [[bin]]
# name = "day15"
# path = "15/15.rs"

# [[bin]]
# name = "day16"
# path = "16/proboscidea_volcanium.rs"

# [[bin]]
# name = "day17"
# path = "17/pyroclastic_flow.rs"

# [[bin]]
# name = "day18"
# path = "18/boiling_boulders.rs"

# [[bin]]
# name = "day19"
# path = "19/minecraft.rs"

# [[bin]]
# name = "day20"
# path = "20/gps.rs"

# [[bin]]
# name = "day21"
# path = "21/monkey_math.rs"

# [[bin]]
# name = "day22"
# path = "22/monkey_map.rs"

# [[bin]]
# name = "day23"
# path = "23/unstable_diffusion.rs"

# [[bin]]
# name = "day24"
# path = "24/blizzard_basin.rs"

# [[bin]]
# name = "day25"
# path = "25/snafu.rs"
