[package]
name = "aoc"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
reqwest = { version = "0.10", features = ["blocking"] }
tap = "1.0"
http = "0.2"
select = "0.5"
scan_fmt = "0.2"

[dev-dependencies]
itertools = "0.9"
md5 = "0.7"
