[package]
name = "aoc"
version = "0.2.0"
authors = ["Rahul Butani <rrbutani@users.noreply.github.com>"]
edition = "2021"

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["blocking"] }
tap = "1.0"
http = "0.2"
select = "0.5"
scan_fmt = "0.2"
itertools = "0.10"
indoc = "1.0"
once_cell = "1.5"
cargo_metadata = "0.14"
aoc-macros = { path = "../macros" }
paste = "1"
num-traits = "0.2"

[dev-dependencies]
md5 = "0.7"
