[package]
name = "macros"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.23", features = ["full"] }
quote = "0.6.10"
aoc = { path = "../aoc" }
# proc-macro2 = "0.4"

# [dependencies.syn]
# features = ["full"]
